force-app/main/default/objects/MemoRequest__c/MemoRequest__c.object-meta.xml
<CustomObject>
    <description>Number of the request, assigned automatically.</description>
    <label>Memo Request</label>
    <nameField>
        <displayFormat>MR-{000000}</displayFormat>
        <label>Memo Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Memo Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>