force-app/main/default/objects/MemoRequest__c/fields/BillingBlockReason__c.field-meta.xml
<CustomField>
    <fullName>BillingBlockReason__c</fullName>
    <inlineHelpText>Billing block reason at header level. Set by the ERP; empty means no block.</inlineHelpText>
    <label>Billing Block Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retourenprüfung AHS</fullName>
                <label>R1</label>
            </value>
            <value>
                <fullName>Check Exchange Rate</fullName>
                <label>00</label>
            </value>
            <value>
                <fullName>Missing Calculation</fullName>
                <label>01</label>
            </value>
            <value>
                <fullName>Missing Feedback</fullName>
                <label>02</label>
            </value>
            <value>
                <fullName>Incomplete Pricing</fullName>
                <label>03</label>
            </value>
            <value>
                <fullName>Check Payment Terms</fullName>
                <label>04</label>
            </value>
            <value>
                <fullName>Check Delivery Terms</fullName>
                <label>05</label>
            </value>
            <value>
                <fullName>Check Credit Note</fullName>
                <label>08</label>
            </value>
            <value>
                <fullName>Check Direct Debit</fullName>
                <label>09</label>
            </value>
            <value>
                <fullName>Navision Block</fullName>
                <label>12</label>
            </value>
            <value>
                <fullName>Price Change Approval</fullName>
                <label>30</label>
            </value>
            <value>
                <fullName>NE Note Determination Error</fullName>
                <label>91</label>
            </value>
            <value>
                <fullName>Coverage Without End Date</fullName>
                <label>92</label>
            </value>
            <value>
                <fullName>Coverage Without Fixed Rate</fullName>
                <label>93</label>
            </value>
            <value>
                <fullName>Coverage Quantity Below Order Quantity</fullName>
                <label>94</label>
            </value>
            <value>
                <fullName>Exchange Rate Conversion Error</fullName>
                <label>95</label>
            </value>
            <value>
                <fullName>No Goods Issue/Goods Receipt Posting</fullName>
                <label>96</label>
            </value>
            <value>
                <fullName>Order Quantity Below Ordered Quantity</fullName>
                <label>97</label>
            </value>
            <value>
                <fullName>Missing Purchase Exchange Rate</fullName>
                <label>98</label>
            </value>
            <value>
                <fullName>Missing Base Key</fullName>
                <label>99</label>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>