force-app/main/default/objects/MemoRequest__c/fields/BillTo__c.field-meta.xml
<CustomField>
    <fullName>BillTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Bill-to party. Prefilled from the sold-to account.</inlineHelpText>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Memo Requests (Bill To)</relationshipLabel>
    <relationshipName>Memo_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>