force-app/main/default/objects/MemoRequest__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The case this request belongs to.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Memo Requests</relationshipLabel>
    <relationshipName>Memo_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>