force-app/main/default/objects/MemoRequest__c/fields/DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannel__c</fullName>
    <inlineHelpText>Distribution channel of the request (20 = AHS, 10 = trade, 30 = export).</inlineHelpText>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DistributionChannel</valueSetName>
    </valueSet>
</CustomField>