force-app/main/default/objects/MemoRequest__c/fields/ERPLastSyncAt__c.field-meta.xml
<CustomField>
    <fullName>ERPLastSyncAt__c</fullName>
    <inlineHelpText>Time of the last response from the ERP system.</inlineHelpText>
    <label>ERP Last Sync At</label>
    <type>DateTime</type>
</CustomField>