force-app/main/default/objects/MemoRequest__c/fields/ERPMemoRequestNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPMemoRequestNumber__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Number of the credit or debit memo request in the ERP system. Filled by the response.</inlineHelpText>
    <label>ERP Memo Request Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>