force-app/main/default/objects/MemoRequest__c/fields/ERPMessage__c.field-meta.xml
<CustomField>
    <fullName>ERPMessage__c</fullName>
    <inlineHelpText>Readable message from the ERP system, filled when the request is rejected.</inlineHelpText>
    <label>ERP Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>