force-app/main/default/objects/MemoRequest__c/fields/ERPRejectionStatus__c.field-meta.xml
<CustomField>
    <fullName>ERPRejectionStatus__c</fullName>
    <label>ERP Rejection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Not rejected</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Partially rejected</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Completely rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>