force-app/main/default/objects/MemoRequest__c/fields/LongText__c.field-meta.xml
<CustomField>
    <fullName>LongText__c</fullName>
    <inlineHelpText>Customer reference for this request. If empty, the memo request number is sent.</inlineHelpText>
    <label>Long Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>