force-app/main/default/objects/MemoRequest__c/fields/MemoCategory__c.field-meta.xml
<CustomField>
    <fullName>MemoCategory__c</fullName>
    <formula>CASE(TEXT(MemoRequestType__c), &quot;ZGA1&quot;,&quot;CREDIT&quot;, &quot;ZGA2&quot;,&quot;CREDIT&quot;, &quot;ZAG1&quot;,&quot;CREDIT&quot;, &quot;ZG1&quot;,&quot;CREDIT&quot;, &quot;ZG2&quot;,&quot;CREDIT&quot;, &quot;ZG2E&quot;,&quot;CREDIT&quot;, &quot;ZG2I&quot;,&quot;CREDIT&quot;, &quot;ZSGS&quot;,&quot;CREDIT&quot;, &quot;ZLA1&quot;,&quot;DEBIT&quot;, &quot;ZLA2&quot;,&quot;DEBIT&quot;, &quot;ZL1&quot;,&quot;DEBIT&quot;, &quot;ZL2&quot;,&quot;DEBIT&quot;, &quot;ZL2I&quot;,&quot;DEBIT&quot;, &quot;ZL2M&quot;,&quot;DEBIT&quot;, &quot;ZSRE&quot;,&quot;DEBIT&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Derived from the document type: CREDIT or DEBIT. Decides which ERP service receives the request.</inlineHelpText>
    <label>Memo Category</label>
    <type>Text</type>
</CustomField>