force-app/main/default/objects/MemoRequest__c/fields/MemoRequestReason__c.field-meta.xml
<CustomField>
    <fullName>MemoRequestReason__c</fullName>
    <inlineHelpText>Reason for the request (ERP order reason).</inlineHelpText>
    <label>Memo Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>