force-app/main/default/objects/MemoRequest__c/fields/MemoRequestType__c.field-meta.xml
<CustomField>
    <fullName>MemoRequestType__c</fullName>
    <inlineHelpText>Credit or debit memo document type as used in the ERP system. The category (credit/debit) is derived from it automatically.</inlineHelpText>
    <label>Memo Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wert Gutschrift AHS (ZGA1)</fullName>
                <label>ZGA1</label>
            </value>
            <value>
                <fullName>Gutschriftsanf. AHS (ZGA2)</fullName>
                <label>ZGA2</label>
            </value>
            <value>
                <fullName>Wert Gutschrift AHS (ZAG1)</fullName>
                <label>ZAG1</label>
            </value>
            <value>
                <fullName>Wert-Gutschriftsanf. (ZG1)</fullName>
                <label>ZG1</label>
            </value>
            <value>
                <fullName>Gutschriftsanford. (ZG2)</fullName>
                <label>ZG2</label>
            </value>
            <value>
                <fullName>Erw. Gutschriftsanf. (ZG2E)</fullName>
                <label>ZG2E</label>
            </value>
            <value>
                <fullName>Gutschriftsan.intern (ZG2I)</fullName>
                <label>ZG2I</label>
            </value>
            <value>
                <fullName>Schadensgutschrift (ZSGS)</fullName>
                <label>ZSGS</label>
            </value>
            <value>
                <fullName>Wert-Lastschrift AHS (ZLA1)</fullName>
                <label>ZLA1</label>
            </value>
            <value>
                <fullName>Lastschriftsanf. AHS (ZLA2)</fullName>
                <label>ZLA2</label>
            </value>
            <value>
                <fullName>Wert-Lastschriftsan (ZL1)</fullName>
                <label>ZL1</label>
            </value>
            <value>
                <fullName>Lastschriftsanford. (ZL2)</fullName>
                <label>ZL2</label>
            </value>
            <value>
                <fullName>Lastschriftsan.int. (ZL2I)</fullName>
                <label>ZL2I</label>
            </value>
            <value>
                <fullName>Lastschr. Leihgebühr (ZL2M)</fullName>
                <label>ZL2M</label>
            </value>
            <value>
                <fullName>Schadensrechnung (ZSRE)</fullName>
                <label>ZSRE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>