force-app/main/default/objects/MemoRequest__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <inlineHelpText>Number of the request, assigned automatically.</inlineHelpText>
    <label>Memo Request Number</label>
    <type>AutoNumber</type>
</CustomField>