force-app/main/default/objects/MemoRequest__c/fields/OrganizationDivision__c.field-meta.xml
<CustomField>
    <fullName>OrganizationDivision__c</fullName>
    <inlineHelpText>Division (default 10).</inlineHelpText>
    <label>Organization Division</label>
    <length>5</length>
    <type>Text</type>
</CustomField>