force-app/main/default/objects/MemoRequest__c/fields/OverallRelatedBillingStatus__c.field-meta.xml
<CustomField>
    <fullName>OverallRelatedBillingStatus__c</fullName>
    <label>Overall Related Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Not Invoiced</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Partially Invoiced</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Completely Invoiced</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>