force-app/main/default/objects/MemoRequest__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Payer. Prefilled from the sold-to account.</inlineHelpText>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Memo Requests (Payer)</relationshipLabel>
    <relationshipName>Memo_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>