force-app/main/default/objects/MemoRequest__c/fields/PricingDate__c.field-meta.xml
<CustomField>
    <fullName>PricingDate__c</fullName>
    <inlineHelpText>Pricing date for the ERP. Prefilled with the invoice date of the reference invoice.</inlineHelpText>
    <label>Pricing Date</label>
    <type>Date</type>
</CustomField>