force-app/main/default/objects/MemoRequest__c/fields/PurchaseOrderbyCustomer__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrderbyCustomer__c</fullName>
    <inlineHelpText>Customer reference for this request. If empty, the memo request number is sent.</inlineHelpText>
    <label>Purchase Order by Customer</label>
    <length>35</length>
    <type>Text</type>
</CustomField>