force-app/main/default/objects/MemoRequest__c/fields/ReferenceOrder__c.field-meta.xml
<CustomField>
    <fullName>ReferenceOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Order the request refers to. Only when no invoice is available.</inlineHelpText>
    <label>Reference Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Memo Requests</relationshipLabel>
    <relationshipName>Memo_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>