force-app/main/default/objects/MemoRequest__c/fields/ReferenceType__c.field-meta.xml
<CustomField>
    <fullName>ReferenceType__c</fullName>
    <inlineHelpText>What the request refers to: invoice, order or no reference. Without a reference the ERP applies current pricing.</inlineHelpText>
    <label>Reference Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INVOICE</fullName>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>ORDER</fullName>
                <label>Order</label>
            </value>
            <value>
                <fullName>NONE</fullName>
                <label>No reference</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>