force-app/main/default/objects/MemoRequest__c/fields/ReturnOrder__c.field-meta.xml
<CustomField>
    <fullName>ReturnOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The return order this request originates from. Empty when the request is created without a return.</inlineHelpText>
    <label>Return Order</label>
    <referenceTo>ReturnOrder</referenceTo>
    <relationshipLabel>Memo Requests</relationshipLabel>
    <relationshipName>Memo_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>