force-app/main/default/objects/MemoRequest__c/fields/SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganization__c</fullName>
    <inlineHelpText>Sales organization of the request (1100 = JJD GmbH).</inlineHelpText>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesOrganization</valueSetName>
    </valueSet>
</CustomField>