force-app/main/default/objects/MemoRequest__c/fields/ShipTo__c.field-meta.xml
<CustomField>
    <fullName>ShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Ship-to party. Prefilled from the sold-to account.</inlineHelpText>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Memo Requests (Ship To)</relationshipLabel>
    <relationshipName>Memo_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>