force-app/main/default/objects/MemoRequest__c/fields/SoldTo__c.field-meta.xml
<CustomField>
    <fullName>SoldTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer who requests the credit memo or receives the debit memo. Its ERP customer number is sent as sold-to party.</inlineHelpText>
    <label>Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Memo Requests</relationshipLabel>
    <relationshipName>Memo_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>