force-app/main/default/objects/MemoRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Draft = editable · Sent = handed over to the integration · Transferred = accepted by the ERP system, ERP number present · Rejected = ERP error, see ERP Message · Closed = completed.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Ready For Transmission to ERP</fullName>
            </value>
            <value>
                <fullName>Transmission Successful</fullName>
            </value>
            <value>
                <fullName>In Processing</fullName>
            </value>
            <value>
                <fullName>Partially Rejected</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected by ERP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>