force-app/main/default/objects/MemoRequest__c/validationRules/MemoRequestSendRequiresReason.validationRule-meta.xml
<ValidationRule>
    <fullName>MemoRequestSendRequiresReason</fullName>
    <active>false</active>
    <description>Sending requires an order reason. Inactive until the reason values are available.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Sent&quot;),
  ISPICKVAL(MemoRequestReason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>MemoRequestReason__c</errorDisplayField>
    <errorMessage>A reason is required before sending.</errorMessage>
</ValidationRule>